--- a/game/client/client_episodic.vcxproj
+++ b/game/client/client_episodic.vcxproj
@@ -869,6 +869,7 @@ exit 1
     <ClInclude Include="toolframework_client.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\server\achievements_vanishing.cpp" />
     <ClCompile Include="mp3player.cpp" />
     <ClCompile Include="replay\cdll_replay.cpp" />
     <ClCompile Include="replay\replaycamera.cpp" />
