--- a/game/server/server_episodic.vcxproj
+++ b/game/server/server_episodic.vcxproj
@@ -1162,6 +1162,7 @@ exit 1
     <ClCompile Include="point_playermoveconstraint.cpp" />
     <ClCompile Include="..\..\game\shared\point_posecontroller.cpp" />
     <ClCompile Include="point_spotlight.cpp" />
+    <ClCompile Include="env_targetindicator.cpp" />
     <ClCompile Include="point_template.cpp" />
     <ClCompile Include="pointanglesensor.cpp" />
     <ClCompile Include="PointAngularVelocitySensor.cpp" />
